--- a/wrangler.toml
+++ b/wrangler.toml
@@ -16,8 +16,8 @@ enabled = true
 
 [vars]
 CF_ACCOUNT_LIST = '''[{
-    "account_id":"你的CloudFlare帐户ID",
-    "token":"有Workers AI权限的API令牌"
+    "account_id":"9ff0bb145111c13d096561bc746ff225",
+    "token":"gEE0XK_forKWrQTDIOu1JySCl2QlvW-aznBltdYC"
 }]'''
 API_KEY = "your_api_key_here"
 CF_TRANSLATE_MODEL = "@cf/qwen/qwen1.5-14b-chat-awq"
